# zap_clock

./: .gitignore  CHANGELOG.md  GITHUB_ACTIONS_RELEASE.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_STATUS.md  LICENSE  PHASE2_IMPLEMENTATION.md  QUICKSTART_RELEASE.md  README.md  ZAPSTORE_CHECKLIST.md  ZAPSTORE_RELEASE.md  branch-protection.yaml  build.sh  clean.sh  flutter_rust_bridge.yaml  pubspec.yaml  zapstore.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/zapclock/zap_clock/: MainActivity.kt
assets/: README.md  donation_recipients.yaml
lib/: app_theme.dart  main.dart
lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/l10n/: app_en.arb  app_ja.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart
lib/models/: alarm.dart  donation_recipient.dart  penalty_preset.dart
lib/providers/: alarm_provider.dart  nwc_provider.dart  storage_provider.dart
lib/screens/: alarm_edit_screen.dart  alarm_list_screen.dart  alarm_ring_screen.dart  onboarding_screen.dart  settings_screen.dart
lib/services/: alarm_countdown_service.dart  alarm_service.dart  nwc_service.dart  permission_service.dart  ringtone_service.dart  storage_service.dart
rust/: Cargo.toml  build.sh
rust/src/: api.rs  frb_generated.rs  lib.rs  lightning.rs  nwc.rs
screenshots/: README.md
test/: widget_test.dart
