[package]
name = "zap_clock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Nostr (最新版でrustls対応)
nostr = { version = "0.37", default-features = false, features = ["std"] }
nostr-sdk = { version = "0.37", default-features = false, features = ["nip04", "nip44", "nip47", "nip59"] }
nwc = "0.37"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client (rustls使用でOpenSSL不要)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi"] }
tracing-log = "0.2"
tracing-android = "0.2"

# Base64
base64 = "0.22"

# Random
rand = "0.8"

[profile.release]
lto = true
opt-level = "z"
strip = true

